<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/home_fragment_image"
        android:layout_width="0dp"
        android:layout_height="@dimen/banner_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/banner_app"
        android:scaleType="fitXY">

    </com.google.android.material.imageview.ShapeableImageView>
    
    <TextView
        android:id="@+id/home_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/home_fragment_title"
        android:layout_marginVertical="@dimen/default_margin"
        android:textAppearance="@style/Title.Mintic">

    </TextView>

    <TextView
        android:id="@+id/home_fragment_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/fragment_home_subtitle"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:layout_marginVertical="@dimen/default_margin"
        android:gravity="center"
        android:textAppearance="@style/TextSecondary.Mintic">

    </TextView>

    <TextView
        android:id="@+id/home_fragment_title_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/fragment_home_services"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:layout_marginVertical="@dimen/default_margin"
        android:gravity="center"
        android:textAppearance="@style/TextBlue2.Mintic">

    </TextView>
    
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/small_margin">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>